--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -9,7 +9,7 @@
       "flex-layout.row#home-blog",
       // "flex-layout.row#home-reviews",
       "flex-layout.row#home-services",
-      "flex-layout.row#upperFooter"
+      "flex-layout.row#homeBottomSection"
     ]
   },
 
@@ -857,33 +857,33 @@
     }
   },
 
-  "flex-layout.row#upperFooter": {
-    "children": ["flex-layout.col#upperFooter"],
+  "flex-layout.row#homeBottomSection": {
+    "children": ["flex-layout.col#homeBottomSection"],
     "props": {
-      "blockClass": "upperFooter"
+      "blockClass": "homeBottomSection"
     }
   },
 
-  "flex-layout.col#upperFooter": {
+  "flex-layout.col#homeBottomSection": {
     "children": [
-      "responsive-layout.desktop#upperFooterDesktop",
-      "responsive-layout.mobile#upperFooterMobile"
+      "responsive-layout.desktop#homeBottomSectionDesktop",
+      "responsive-layout.mobile#homeBottomSectionMobile"
     ],
     "props": {
-      "blockClass": "upperFooter"
+      "blockClass": "homeBottomSection"
     }
   },
 
-  "responsive-layout.desktop#upperFooterDesktop": {
-    "children": ["flex-layout.row#upperFooterDesktop"],
+  "responsive-layout.desktop#homeBottomSectionDesktop": {
+    "children": ["flex-layout.row#homeBottomSectionDesktop"],
     "props": {
-      "blockClass": "upperFooterDesktop"
+      "blockClass": "homeBottomSectionDesktop"
     }
   },
-  "responsive-layout.mobile#upperFooterMobile": {
-    "children": ["flex-layout.row#upperFooterMobile"],
+  "responsive-layout.mobile#homeBottomSectionMobile": {
+    "children": ["flex-layout.row#homeBottomSectionMobile"],
     "props": {
-      "blockClass": "upperFooterMobile"
+      "blockClass": "homeBottomSectionMobile"
     }
   }
 }
