--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -328,7 +328,7 @@
   "flex-layout.row#home-shelf-02": {
     "children": ["flex-layout.col#home-shelf-02"],
     "props": {
-      "blockClass": "Offerta del mese"
+      "blockClass": "home-shelf-02"
     }
   },
 
