Feat: Pagina institucional para o desktop pronta

--- a/store/blocks/footer/footerMobile.jsonc
+++ b/store/blocks/footer/footerMobile.jsonc
@@ -1,20 +1,18 @@
 {
   "footer-layout.mobile": {
     "children": [
-      "flex-layout.row#upperFooterMobile",
+      "flex-layout.row#FooterLinksMobile",
       "flex-layout.row#footerPaymentMethods",
       "flex-layout.row#bottomFooterDesktop"
     ]
   },
-  "flex-layout.row#upperFooterMobile": {
-    "children": [
-      "flex-layout.col#upperFooterMobile"
-    ],
+  "flex-layout.row#FooterLinksMobile": {
+    "children": ["flex-layout.col#FooterLinksMobile"],
     "props": {
       "blockClass": "footer-upperFooterMobile"
     }
   },
-  "flex-layout.col#upperFooterMobile": {
+  "flex-layout.col#FooterLinksMobile": {
     "children": [
       "flex-layout.row#upperFooterCol3",
       "flex-layout.row#upperFooterCol2Mobile",
@@ -22,9 +20,7 @@
     ]
   },
   "flex-layout.row#upperFooterCol2Mobile": {
-    "children": [
-      "disclosure-layout#upperFooterCol2Mobile"
-    ],
+    "children": ["disclosure-layout#upperFooterCol2Mobile"],
     "props": {
       "blockClass": "footer-containerDisclosure"
     }
@@ -45,17 +41,13 @@
     }
   },
   "disclosure-content#upperFooterCol2Mobile": {
-    "children": [
-      "flex-layout.row#upperFooterLinksCol1"
-    ],
+    "children": ["flex-layout.row#upperFooterLinksCol1"],
     "props": {
       "blockClass": "footer-disclosureContent"
     }
   },
   "flex-layout.row#upperFooterCol1Mobile": {
-    "children": [
-      "disclosure-layout#upperFooterCol1Mobile"
-    ],
+    "children": ["disclosure-layout#upperFooterCol1Mobile"],
     "props": {
       "blockClass": "footer-containerDisclosure"
     }
@@ -76,9 +68,7 @@
     }
   },
   "disclosure-content#upperFooterCol1Mobile": {
-    "children": [
-      "flex-layout.col#upperFooterLinksCol2"
-    ],
+    "children": ["flex-layout.col#upperFooterLinksCol2"],
     "props": {
       "blockClass": "footer-disclosureContent"
     }
