Fix: Mudando o background do breadcrumb para branco

--- a/store/blocks/pages/editorial.jsonc
+++ b/store/blocks/pages/editorial.jsonc
@@ -20,6 +20,7 @@
   },
   "flex-layout.col#container-about-us": {
     "children": [
+      "flex-layout.row#breadcrumb",
       "flex-layout.col#about-title",
       "flex-layout.row#about-banner-2",
       "flex-layout.row#about-banner-3",
