Feat: Alinhando containers

--- a/store/blocks/default.jsonc
+++ b/store/blocks/default.jsonc
@@ -18,6 +18,9 @@
     "props": {
       "isInitialScreenOptionOnly": false,
       "defaultOption": 1,
+      "emailPlaceholder": "Indirizzo e-mail",
+      "emailAndPasswordTitle": "Accedi",
+      "passwordPlaceholder": "Password",
       "showPasswordVerificationIntoTooltip": true
     }
   },
