--- a/store/blocks/header/headerDesktop.jsonc
+++ b/store/blocks/header/headerDesktop.jsonc
@@ -146,6 +146,7 @@
     "props": {
       "emailPlaceholder": "E-mail",
       "passwordPlaceholder": "Senha",
+      "logInButtonBehavior": "link",
       "showPasswordVerificationIntoTooltip": true,
       "showIconProfile": true,
       "iconLabel": "."
