--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "vtex.store": "2.x",
+    "vtex.store-form": "0.x",
     "vtex.auth-challenge": "1.x",
     "vtex.device-detector": "0.x",
     "vtex.store-header": "2.x",
